--- a/Template/index.html
+++ b/Template/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gotta Abduct 'Em All! vX.X</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <script src="game.js"></script>
     <script>
 		window.addEventListener("keydown", function(e) {
@@ -13,7 +15,6 @@
 		}, false);
 		window.addEventListener('load',function(){ut._HTML.main()});
 		</script>
-    <title>Gotta Abduct 'Em All! vX.X</title>
   </head>
   <body>
   </body>
